<resources>
    <string name="appName">Tickets</string>
    <string name="optionNew">New</string>
    <string name="ticketNameLabel">Name</string>
    <string name="ticketDescriptionLabel">Description</string>
    <string name="ticketStateLabel">State</string>
    <string name="ticketNotFound">Ticket not found</string>
    <string name="optionEdit">Edit</string>
    <string name="buttonSave">Save</string>
    <string name="optionDelete">Delete</string>
    <string name="unableToUpdateTicket">Unable to update ticket</string>
    <string name="unableToDeleteTickets">Unable to delete all selected tickets</string>
    <string name="createdTicketOkFeedback">Ticket created successfully</string>
    <string name="deletedTicketsOkFeedback">Tickets deleted</string>
    <string name="deleteTicketConfirmationDialogMessage">%d ticket(s) will be deleted. Would you like to continue?</string>
    <string name="optionCancel">Cancel</string>
    <string name="projectNameLabel">Name</string>
    <string name="optionNext">Next</string>
    <string name="newProjectActivityTitle">Project details</string>
    <string name="newTicketActivityTitle">Ticket details</string>
    <string name="ticketTypeLabel">Ticket type</string>
    <string name="ticketTypeNewCapability">New Capability</string>
    <string name="ticketTypeIssue">Issue</string>
    <string name="ticketTypeModification">Modification</string>
    <string name="projectPickerActivityTitle">Select a project</string>
    <string name="releaseTypePickerActivityTitle">Select a release type</string>
    <string name="ticketSetPickerActivityTitle">Select tickets</string>
    <string name="releaseAnchorPickerActivityTitle">Select anchor</string>
    <string name="ticketStateNotStarted">Not started</string>
    <string name="ticketStateInProgress">In progress</string>
    <string name="ticketStateAbandoned">Abandoned</string>
    <string name="ticketStateCompleted">Completed</string>
    <string name="noReleasesPlaceholderText">No releases yet</string>
    <string name="ticketsTabText">Tickets</string>
    <string name="releasesTabText">Releases</string>
    <string name="releaseTypeMajor">Major</string>
    <string name="releaseTypeMinor">Minor</string>
    <string name="releaseTypeBugFix">Bug Fix</string>
    <string name="releaseTypeMajorInfo">A major version implies that the new release will include changes that make this new version incompatible with previous versions.</string>
    <string name="releaseTypeMinorInfo">A minor version implies that the new release will include new additional capabilities while ensuring compatibility with previous version.\n\nIt means that 3rd party software using this software should not notice that the version has changed (according to the Liskov substitution principle), and ideally users should recognise the UI even if new buttons/controls are now available.</string>
    <string name="releaseTypeBugFixInfo">Choose the option if the new release will keep exactly the same API exposed to 3rd party software, and ideally the same UI exposed to users.\n\nThis is the ideal option when the release just include bug fixes, or performance improvements.</string>
    <string name="createReleaseButtonText">Create release</string>
    <string name="noProjectPlaceholder">There are no tickets in the database yet.\n\nStart by creating your first ticket.</string>
    <string name="noProjectPlaceholderNewTicketButton">Create Ticket</string>
</resources>
