<?xml version="1.0" encoding="utf-8"?>
<sword.tickets.android.view.ListViewFrameView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listViewFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</sword.tickets.android.view.ListViewFrameView>
